--- a/resources/css/pagestyle.css
+++ b/resources/css/pagestyle.css
@@ -68,6 +68,7 @@ body {
   -webkit-box-align: center;
       -ms-flex-align: center;
           align-items: center;
+  margin-top: 20px;
   padding: 60px;
   line-height: 1.2;
 }
@@ -220,9 +221,6 @@ body {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
-  -webkit-box-pack: space-evenly;
-      -ms-flex-pack: space-evenly;
-          justify-content: space-evenly;
   width: 100%;
   font-size: 13px;
   padding: 5px;
@@ -255,6 +253,21 @@ body {
           text-decoration-color: #43FFA8;
 }
 
+.footer-desktop {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -ms-flex-pack: distribute;
+      justify-content: space-around;
+  -webkit-box-flex: 1;
+      -ms-flex: 1;
+          flex: 1;
+}
+
+.footer-mobile {
+  display: none;
+}
+
 @media (max-width: 992px) {
   .nav-logo {
     z-index: 90;
@@ -284,6 +297,38 @@ body {
   .container-fluid__text {
     font-size: 25px;
     font-weight: bold;
+  }
+  .footer-desktop {
+    display: none;
+  }
+  .footer-mobile {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-pack: justify;
+        -ms-flex-pack: justify;
+            justify-content: space-between;
+    -webkit-box-flex: 1;
+        -ms-flex: 1;
+            flex: 1;
+    -webkit-box-align: center;
+        -ms-flex-align: center;
+            align-items: center;
+    margin-left: 20px;
+    margin-top: 10px;
+  }
+  .footer-mobile img {
+    width: 30px;
+    margin-bottom: 15px;
+  }
+  .footer-mobile .instagram-link {
+    text-decoration: none;
+    margin: 5px;
+  }
+  .footer-mobile .youtube-link {
+    text-decoration: none;
+    margin: 5px;
+    margin-right: 20px;
   }
 }
 
