--- a/resources/scss/pagestyle.scss
+++ b/resources/scss/pagestyle.scss
@@ -325,6 +325,7 @@ body {
 
   .navbar-collapse ul {
     transform: translate(0, -10%);
+    line-height: 1;
   }
 
   .container-fluid .container-fluid__text {
