--- a/resources/scss/pagestyle.scss
+++ b/resources/scss/pagestyle.scss
@@ -207,7 +207,8 @@ body {
   .navbar-nav {
     min-height: 100vh;
     justify-content: center;
-    transform: translate(0, -10%);
+    transform: translate(0, -12%);
+    line-height: 1.1;
   }
 
   .container-fluid {
