--- a/resources/css/pagestyle.css
+++ b/resources/css/pagestyle.css
@@ -12,8 +12,13 @@ html {
 body {
   height: 100%;
   background-color: white;
+  display: -webkit-box;
+  display: -ms-flexbox;
   display: flex;
-  flex-direction: column;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
 }
 
 .logo {
@@ -22,7 +27,8 @@ body {
 }
 
 .logo:hover {
-  transform: scale(0.95);
+  -webkit-transform: scale(0.95);
+          transform: scale(0.95);
 }
 
 .navbar-light .navbar-toggler {
@@ -32,6 +38,7 @@ body {
 .navbar-light .navbar-nav .nav-link {
   color: black;
   font-weight: bold;
+  -webkit-transition: all 0.3s ease 0s;
   transition: all 0.3s ease 0s;
   text-align: center;
 }
@@ -52,11 +59,16 @@ body {
 .container-fluid {
   height: 100%;
   width: 80%;
+  display: -webkit-box;
+  display: -ms-flexbox;
   display: flex;
-  justify-content: center;
-  align-items: center;
-  margin-top: 20px;
-  padding: 60px;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  margin-top: 90px;
   line-height: 1.2;
 }
 
@@ -68,11 +80,17 @@ body {
 
 .container {
   height: 100%;
+  display: -webkit-box;
+  display: -ms-flexbox;
   display: flex;
-  justify-content: center;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
   margin-bottom: 50px;
   margin-top: 90px;
-  align-items: center;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
 }
 
 .container__text {
@@ -90,7 +108,8 @@ body {
   height: 150px;
   border: 1px solid lightgrey;
   border-radius: 4px;
-  box-sizing: border-box;
+  -webkit-box-sizing: border-box;
+          box-sizing: border-box;
   resize: none;
   margin: 0;
   margin-bottom: 10px;
@@ -102,7 +121,8 @@ body {
   width: 100%;
   border: 1px solid lightgrey;
   border-radius: 4px;
-  box-sizing: border-box;
+  -webkit-box-sizing: border-box;
+          box-sizing: border-box;
   resize: none;
   margin: 0;
   margin-bottom: 10px;
@@ -122,6 +142,7 @@ body {
 
 .container__button[type=submit]:hover {
   color: white;
+  -webkit-transition: all 0.3s ease 0s;
   transition: all 0.3s ease 0s;
 }
 
@@ -137,6 +158,7 @@ body {
 
 .grid div {
   cursor: pointer;
+  -webkit-transition: all 0.3s ease-out;
   transition: all 0.3s ease-out;
   background: #43FFA8;
   height: 300px;
@@ -145,7 +167,8 @@ body {
 
 .grid div:hover {
   opacity: 0.8;
-  transform: scale(1.01);
+  -webkit-transform: scale(1.01);
+          transform: scale(1.01);
 }
 
 .grid .video-container {
@@ -166,6 +189,8 @@ body {
 }
 
 .footer {
+  display: -webkit-box;
+  display: -ms-flexbox;
   display: flex;
   width: 100%;
   font-size: 13px;
@@ -200,9 +225,14 @@ body {
 }
 
 .footer-desktop {
+  display: -webkit-box;
+  display: -ms-flexbox;
   display: flex;
-  justify-content: space-around;
-  flex: 1;
+  -ms-flex-pack: distribute;
+      justify-content: space-around;
+  -webkit-box-flex: 1;
+      -ms-flex: 1;
+          flex: 1;
 }
 
 .footer-mobile {
@@ -225,8 +255,11 @@ body {
   }
   .navbar-nav {
     min-height: 100vh;
-    justify-content: center;
-    transform: translate(0, -12%);
+    -webkit-box-pack: center;
+        -ms-flex-pack: center;
+            justify-content: center;
+    -webkit-transform: translate(0, -12%);
+            transform: translate(0, -12%);
     line-height: 1.1;
   }
   .container-fluid {
@@ -241,10 +274,18 @@ body {
     display: none;
   }
   .footer-mobile {
+    display: -webkit-box;
+    display: -ms-flexbox;
     display: flex;
-    justify-content: space-between;
-    flex: 1;
-    align-items: center;
+    -webkit-box-pack: justify;
+        -ms-flex-pack: justify;
+            justify-content: space-between;
+    -webkit-box-flex: 1;
+        -ms-flex: 1;
+            flex: 1;
+    -webkit-box-align: center;
+        -ms-flex-align: center;
+            align-items: center;
     margin-left: 20px;
     margin-top: 10px;
   }
@@ -321,7 +362,8 @@ body {
 
 @media (min-width: 320px) and (max-width: 900px) and (orientation: landscape) {
   .navbar-collapse ul {
-    transform: translate(0, -15%);
+    -webkit-transform: translate(0, -15%);
+            transform: translate(0, -15%);
     line-height: 1;
   }
   .container-fluid .container-fluid__text {
@@ -341,7 +383,7 @@ body {
   }
   .container__text {
     font-weight: bold;
-    font-size: 25px;
+    font-size: 40px;
   }
   .container__textarea {
     height: 70px;
