--- a/resources/css/pagestyle.css
+++ b/resources/css/pagestyle.css
@@ -265,6 +265,7 @@ body {
   .container-fluid {
     padding: 30px;
     width: 100%;
+    margin-top: 60px;
   }
   .container-fluid__text {
     font-size: 25px;
