--- a/resources/css/pagestyle.css
+++ b/resources/css/pagestyle.css
@@ -289,6 +289,7 @@ body {
             align-items: center;
     margin-left: 20px;
     margin-top: 10px;
+    font-size: 10px;
   }
   .footer-mobile img {
     width: 30px;
