--- a/resources/scss/pagestyle.scss
+++ b/resources/scss/pagestyle.scss
@@ -233,6 +233,7 @@ body {
     align-items: center;
     margin-left: 20px;
     margin-top: 10px;
+    font-size: 10px;
 
     img {
       width: 30px;
